examen-git/2023/d-jefferson

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <header>
       <div class="title">Curso de Desarrollo Web</div>
       <div class="body">
-        <div class="name">SU NOMBRE AQUÍ</div>
+        <div class="name">Jefferson Durán</div>
         <div class="icon"></div>
         <div class="date">
           <span class="title">Fecha:</span>
-          <span class="datepart">AÑO</span>
-          <span class="datepart">MES</span>
-          <span class="datepart">DÍA</span>
+          <span class="datepart">2023</span>
+          <span class="datepart">06</span>
+          <span class="datepart">29</span>
         </div>
       </div>
     </header>
